# ASIO-Server

./: .gitignore  FrameworkBasics.sln  README.md
NetServer/: CMakeLists.txt  DamageContext.h  GameServer.cpp  GameServer.h  Match.cpp  Match.h  MatchState.hpp  NetServer.vcxproj  NetServer.vcxproj.filters  ReconnectionSession.cpp  ReconnectionSession.h  gameLevel.cpp  gameLevel.h  main.cpp  server.db
NetServer/game/entities/: CharacterFactory.cpp  CharacterFactory.h
NetServer/game/spells/: Spell.cpp  Spell.h  SpellFactory.h  SpellManager.h  TimedSpell.h
NetServer/game/spells/AiSpells/: ArrowShot.cpp  ArrowShot.h  MeleeHit.cpp  MeleeHit.h
NetServer/game/spells/Hunter/: BindArrowSpell.cpp  BindArrowSpell.h  ChainHarvest.cpp  ChainHarvest.h  CraftArrowSpell.cpp  CraftArrowSpell.h  GhostArrow.cpp  GhostArrow.h  GrappleSpell.cpp  GrappleSpell.h  InfuseArrow.cpp  InfuseArrow.h  ReloadQuiver.cpp  ReloadQuiver.h  Shoot.cpp  Shoot.h  StickyBombSpell.cpp  StickyBombSpell.h
NetServer/game/spells/Mage/: BlastWave.cpp  BlastWave.h  FireBallSpell.cpp  FireBallSpell.h  FireDash.cpp  FireDash.h  IceRoots.cpp  IceRoots.h  IceShield.cpp  IceShield.h  IceballSpell.cpp  IceballSpell.h  MagicConservation.cpp  MagicConservation.h  Resonance Crystal.cpp  Resonance Crystal.h  StygianSpike.cpp  StygianSpike.h  SunLance.cpp  SunLance.h  SunMarker.cpp  SunMarker.h  SwitchSpell.cpp  SwitchSpell.h  TeleportSpell.cpp  TeleportSpell.h  WallSpell.cpp  WallSpell.h
NetServer/game/spells/Warrior/: PullHookSpell.cpp  PullHookSpell.h  ShieldBurst.cpp  (+7 more)
NetServer/game/utils/: SpatialCell.h  WorldGrid.h
(+134 files in other folders)
